Enhance SEO and social media integration in index.html; add social card image

--- a/Clients/index.html
+++ b/Clients/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VerifyWise</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <!-- General meta description for SEO -->
+  <meta name="description"
+    content="VerifyWise helps you track, audit, and ensure compliance for AI systems with full transparency and responsibility." />
+
+  <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+  <meta property="og:title" content="VerifyWise – the leading open source AI governance platform" />
+  <meta property="og:description"
+    content="Track, audit, and ensure compliance for AI systems. Built for transparency, trust, and responsibility in AI." />
+  <meta property="og:image" content="/social-card.jpg" />
+  <meta property="og:url" content="https://explore.verifywise.ai" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="VerifyWise – the leading open source AI governance platform" />
+  <meta name="twitter:description"
+    content="Track, audit, and ensure compliance for AI systems. Built for transparency, trust, and responsibility in AI." />
+  <meta name="twitter:image" content="/social-card.jpg" />
+
+  <title>VerifyWise - Open Source AI Governance Platform</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
