Update Open Graph and Twitter Card image URLs for consistency and improved SEO

--- a/Clients/index.html
+++ b/Clients/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="VerifyWise – the leading open source AI governance platform" />
   <meta property="og:description"
     content="Track, audit, and ensure compliance for AI systems. Built for transparency, trust, and responsibility in AI." />
-  <meta property="og:image" content="/social-card.jpg" />
+  <meta property="og:image" content="https://explore.verifywise.ai/social-card.jpg" />
   <meta property="og:url" content="https://explore.verifywise.ai" />
   <meta property="og:type" content="website" />
 
@@ -19,7 +19,7 @@
   <meta name="twitter:title" content="VerifyWise – the leading open source AI governance platform" />
   <meta name="twitter:description"
     content="Track, audit, and ensure compliance for AI systems. Built for transparency, trust, and responsibility in AI." />
-  <meta name="twitter:image" content="/social-card.jpg" />
+  <meta name="twitter:image" content="https://explore.verifywise.ai/social-card.jpg" />
 
   <title>VerifyWise - Open Source AI Governance Platform</title>
 </head>
