included favicon to the site

--- a/Clients/index.html
+++ b/Clients/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- General meta description for SEO -->
+  <link rel="icon" type="image/svg+xml" sizes="16x16" href="/vite.svg" />
   <meta name="description"
     content="VerifyWise helps you track, audit, and ensure compliance for AI systems with full transparency and responsibility." />
 
