created different sizes of favicon in 16x16, 32x32, 64x64 and 128x128 placed them in the icon folder and embedded them with the html file

--- a/Clients/index.html
+++ b/Clients/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <!-- General meta description for SEO -->
-  <link rel="icon" type="image/svg+xml" sizes="16x16" href="/favicon.svg" />
-  <link rel="icon" type="image/svg+xml" sizes="32x32" href="/favicon.svg" />
-  <link rel="icon" type="image/svg+xml" sizes="64x64" href="/favicon.svg" />
-  <link rel="icon" type="image/svg+xml" sizes="128x128" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" sizes="16x16" href="/favicon16x16.svg" />
+  <link rel="icon" type="image/svg+xml" sizes="32x32" href="/favicon32x32.svg" />
+  <link rel="icon" type="image/svg+xml" sizes="64x64" href="/favicon64x64.svg" />
+  <link rel="icon" type="image/svg+xml" sizes="128x128" href="/favicon128x128.svg" />
   <meta name="description"
     content="VerifyWise helps you track, audit, and ensure compliance for AI systems with full transparency and responsibility." />
 
