--- a/Clients/index.html
+++ b/Clients/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="Track, audit, and ensure compliance for AI systems. Built for transparency, trust, and responsibility in AI." />
   <meta property="og:image" content="https://explore.verifywise.ai/social-card.jpg" />
-  <meta property="og:url" content="https://explore.verifywise.ai" />
+  <meta property="og:url" content="https://app.verifywise.ai" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
