fixed the vite config file to accept the html contents. added the HelperDrawer to the Reporting page

--- a/Clients/src/presentation/helpers/bias-fairness-help.html
+++ b/Clients/src/presentation/helpers/bias-fairness-help.html
@@ -1,10 +1,16 @@
 <div>
-  <h2>Bias & Fairness Dashboard</h2>
-  <p>Evaluate and monitor the fairness of your AI models through comprehensive bias assessments.</p>
+  <h2>Bias & Fairness Assessment</h2>
+  <p>Monitor and evaluate AI model fairness metrics and identify potential biases in your systems.</p>
   
-  <h3>Using the Dashboard</h3>
-  <p>1. Upload your model (.pkl file) and dataset (.csv)<br>
-  2. Select target and sensitive columns<br>
-  3. Review fairness metrics and results<br>
-  4. Generate detailed fairness reports</p>
+  <h3>Key Features</h3>
+  <p>1. Upload and analyze AI models<br>
+  2. View detailed fairness metrics<br>
+  3. Track bias assessment history<br>
+  4. Generate bias assessment reports</p>
+
+  <h3>How to Use</h3>
+  <p>1. Upload your model file (.pkl format)<br>
+  2. Select target and sensitive attributes<br>
+  3. Run fairness assessment<br>
+  4. Review results and recommendations</p>
 </div>
