--- a/Clients/index.html
+++ b/Clients/index.html
@@ -1,36 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- General meta description for SEO -->
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      sizes="16x16"
+      href="/favicon16x16.svg"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      sizes="32x32"
+      href="/favicon32x32.svg"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      sizes="64x64"
+      href="/favicon64x64.svg"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      sizes="128x128"
+      href="/favicon128x128.svg"
+    />
+    <meta
+      name="description"
+      content="VerifyWise helps you track, audit, and ensure compliance for AI systems with full transparency and responsibility."
+    />
 
-<head>
-  <!-- General meta description for SEO -->
-  <link rel="icon" type="image/svg+xml" sizes="16x16" href="/favicon16x16.svg" />
-  <link rel="icon" type="image/svg+xml" sizes="32x32" href="/favicon32x32.svg" />
-  <link rel="icon" type="image/svg+xml" sizes="64x64" href="/favicon64x64.svg" />
-  <link rel="icon" type="image/svg+xml" sizes="128x128" href="/favicon128x128.svg" />
-  <meta name="description"
-    content="VerifyWise helps you track, audit, and ensure compliance for AI systems with full transparency and responsibility." />
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta
+      property="og:title"
+      content="VerifyWise - the leading open source AI governance platform"
+    />
+    <meta
+      property="og:description"
+      content="Track, audit, and ensure compliance for AI systems. Built for transparency, trust, and responsibility in AI."
+    />
+    <meta
+      property="og:image"
+      content="https://app.verifywise.ai/social-card.jpg"
+    />
+    <meta property="og:url" content="https://app.verifywise.ai" />
+    <meta property="og:type" content="website" />
 
-  <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="VerifyWise – the leading open source AI governance platform" />
-  <meta property="og:description"
-    content="Track, audit, and ensure compliance for AI systems. Built for transparency, trust, and responsibility in AI." />
-  <meta property="og:image" content="https://app.verifywise.ai/social-card.jpg" />
-  <meta property="og:url" content="https://app.verifywise.ai" />
-  <meta property="og:type" content="website" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="VerifyWise - the leading open source AI governance platform"
+    />
+    <meta
+      name="twitter:description"
+      content="Track, audit, and ensure compliance for AI systems. Built for transparency, trust, and responsibility in AI."
+    />
+    <meta
+      name="twitter:image"
+      content="https://explore.verifywise.ai/social-card.jpg"
+    />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="VerifyWise – the leading open source AI governance platform" />
-  <meta name="twitter:description"
-    content="Track, audit, and ensure compliance for AI systems. Built for transparency, trust, and responsibility in AI." />
-  <meta name="twitter:image" content="https://explore.verifywise.ai/social-card.jpg" />
+    <title>VerifyWise - Open Source AI Governance Platform</title>
+  </head>
 
-  <title>VerifyWise - Open Source AI Governance Platform</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
