fixing dashboard-help.html elements

--- a/Clients/src/presentation/helpers/dashboard-help.html
+++ b/Clients/src/presentation/helpers/dashboard-help.html
@@ -1,22 +1,35 @@
-<div>
+<section>
   <p>
     Your central hub for monitoring AI governance activities, compliance status,
     and key metrics.
   </p>
 
-  <h3>Key Features</h3>
-  <p>
-    1. View overall compliance status and risk metrics<br />
-    2. Monitor active projects and their assessment status<br />
-    3. Track vendor evaluations and performance<br />
-    4. Access quick links to common tasks
-  </p>
+  <section>
+    <h3>Key Features</h3>
+    <ul>
+      <li>View overall compliance status and risk metrics</li>
+      <li>Monitor active projects and their assessment status</li>
+      <li>Track vendor evaluations and performance</li>
+      <li>Access quick links to common tasks</li>
+    </ul>
+  </section>
 
-  <h3>Dashboard Sections</h3>
-  <p>
-    1. Project Overview: View active projects and their status<br />
-    2. Risk Assessment: Monitor identified risks and mitigation progress<br />
-    3. Compliance Metrics: Track compliance scores and trends<br />
-    4. Recent Activities: See latest updates and changes
-  </p>
-</div>
+  <section>
+    <h3>Dashboard Sections</h3>
+    <ul>
+      <li>
+        <strong>Project Overview:</strong> View active projects and their status
+      </li>
+      <li>
+        <strong>Risk Assessment:</strong> Monitor identified risks and
+        mitigation progress
+      </li>
+      <li>
+        <strong>Compliance Metrics:</strong> Track compliance scores and trends
+      </li>
+      <li>
+        <strong>Recent Activities:</strong> See latest updates and changes
+      </li>
+    </ul>
+  </section>
+</section>
