--- a/Clients/src/presentation/helpers/ai-trust-center-help.html
+++ b/Clients/src/presentation/helpers/ai-trust-center-help.html
@@ -1,21 +1,35 @@
-<div>
+<section>
   <p>
     Your centralized platform for managing AI governance, compliance, and
     building trust with stakeholders.
   </p>
 
-  <h3>Key Sections</h3>
-  <p>
-    1. Overview: Get a comprehensive view of your AI governance status<br />
-    2. Resources: Access documentation and AI governance materials<br />
-    3. Subprocessors: Manage and track AI service providers<br />
-    4. Settings: Configure your AI Trust Center preferences
-  </p>
+  <section>
+    <h3>Key Sections</h3>
+    <ul>
+      <li>
+        <strong>Overview:</strong> Get a comprehensive view of your AI
+        governance status
+      </li>
+      <li>
+        <strong>Resources:</strong> Access documentation and AI governance
+        materials
+      </li>
+      <li>
+        <strong>Subprocessors:</strong> Manage and track AI service providers
+      </li>
+      <li>
+        <strong>Settings:</strong> Configure your AI Trust Center preferences
+      </li>
+    </ul>
+  </section>
 
-  <h3>Using Preview Mode</h3>
-  <p>
-    Click the 'Preview Mode' button to see how your AI Trust Center appears to
-    external stakeholders. This helps ensure transparency and proper information
-    sharing.
-  </p>
-</div>
+  <section>
+    <h3>Using Preview Mode</h3>
+    <p>
+      Click the 'Preview Mode' button to see how your AI Trust Center appears to
+      external stakeholders. This helps ensure transparency and proper
+      information sharing.
+    </p>
+  </section>
+</section>
