fixing bias-fairness-help.html elements

--- a/Clients/src/presentation/helpers/bias-fairness-help.html
+++ b/Clients/src/presentation/helpers/bias-fairness-help.html
@@ -1,22 +1,26 @@
-<div>
+<section>
   <p>
     Monitor and evaluate AI model fairness metrics and identify potential biases
     in your systems.
   </p>
 
-  <h3>Key Features</h3>
-  <p>
-    1. Upload and analyze AI models<br />
-    2. View detailed fairness metrics<br />
-    3. Track bias assessment history<br />
-    4. Generate bias assessment reports
-  </p>
+  <section>
+    <h3>Key Features</h3>
+    <ul>
+      <li>Upload and analyze AI models</li>
+      <li>View detailed fairness metrics</li>
+      <li>Track bias assessment history</li>
+      <li>Generate bias assessment reports</li>
+    </ul>
+  </section>
 
-  <h3>How to Use</h3>
-  <p>
-    1. Upload your model file (.pkl format)<br />
-    2. Select target and sensitive attributes<br />
-    3. Run fairness assessment<br />
-    4. Review results and recommendations
-  </p>
-</div>
+  <section>
+    <h3>How to Use</h3>
+    <ol>
+      <li>Upload your model file (.pkl format)</li>
+      <li>Select target and sensitive attributes</li>
+      <li>Run fairness assessment</li>
+      <li>Review results and recommendations</li>
+    </ol>
+  </section>
+</section>
