--- a/Clients/src/presentation/helpers/reporting-help.html
+++ b/Clients/src/presentation/helpers/reporting-help.html
@@ -1,21 +1,25 @@
-<div>
+<section>
   <p>
     Generate and manage comprehensive reports for your AI governance activities.
   </p>
 
-  <h3>Key Features</h3>
-  <p>
-    1. Generate reports for different aspects of your AI system<br />
-    2. Export reports in various formats (PDF, CSV)<br />
-    3. Schedule automated report generation<br />
-    4. Track report history and versions
-  </p>
+  <section>
+    <h3>Key Features</h3>
+    <ul>
+      <li>Generate reports for different aspects of your AI system</li>
+      <li>Export reports in various formats (PDF, CSV)</li>
+      <li>Schedule automated report generation</li>
+      <li>Track report history and versions</li>
+    </ul>
+  </section>
 
-  <h3>How to Use</h3>
-  <p>
-    1. Select report type from the available options<br />
-    2. Choose date range and filters<br />
-    3. Configure report parameters<br />
-    4. Click 'Generate Report' to create your report
-  </p>
-</div>
+  <section>
+    <h3>How to Use</h3>
+    <ol>
+      <li>Select report type from the available options</li>
+      <li>Choose date range and filters</li>
+      <li>Configure report parameters</li>
+      <li>Click 'Generate Report' to create your report</li>
+    </ol>
+  </section>
+</section>
