fixing training-help.html elements

--- a/Clients/src/presentation/helpers/training-help.html
+++ b/Clients/src/presentation/helpers/training-help.html
@@ -1,22 +1,26 @@
-<div>
+<section>
   <p>
     Manage and track all AI-related training programs and certifications in your
     organization.
   </p>
 
-  <h3>Key Features</h3>
-  <p>
-    1. Track employee training progress and completion status<br />
-    2. Manage training certifications and expiration dates<br />
-    3. Schedule and organize training sessions<br />
-    4. Generate training compliance reports
-  </p>
+  <section>
+    <h3>Key Features</h3>
+    <ul>
+      <li>Track employee training progress and completion status</li>
+      <li>Manage training certifications and expiration dates</li>
+      <li>Schedule and organize training sessions</li>
+      <li>Generate training compliance reports</li>
+    </ul>
+  </section>
 
-  <h3>How to Use</h3>
-  <p>
-    1. Add new training programs using the 'Add Training' button<br />
-    2. Assign training to team members<br />
-    3. Monitor completion status in the training table<br />
-    4. Download certificates and training records
-  </p>
-</div>
+  <section>
+    <h3>How to Use</h3>
+    <ol>
+      <li>Add new training programs using the 'Add Training' button</li>
+      <li>Assign training to team members</li>
+      <li>Monitor completion status in the training table</li>
+      <li>Download certificates and training records</li>
+    </ol>
+  </section>
+</section>
